db_tutorial/src/snapshots/db_tutorial__tests__email_is_too_long.snap
---
source: src/main.rs
expression: run_test(input).unwrap()
---
db > Error while executing Insert(Row { id: 1, user_name: "foo", email: "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" }): String length exceeds max length 255
db > Executed: "select"
db > Bye.
