db_tutorial/src/snapshots/db_tutorial__tests__id_must_not_be_negative.snap
---
source: src/main.rs
expression: run_test(input).unwrap()
---
db > Error while executing "insert -1 foo foo@example.com": Syntax error: "insert {id} {user} {email}"
db > Executed: "select"
db >
