db_tutorial/src/snapshots/db_tutorial__tests__name_is_too_long.snap
---
source: src/main.rs
expression: run_test(input).unwrap()
---
db > Error while executing Insert(Row { id: 1, user_name: "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa", email: "foo@example.com" }): String length exceeds max length 32
db > Executed: "select"
db >
