db_tutorial/src/snapshots/db_tutorial__tests__persistent_single_page.snap
---
source: src/main.rs
expression: output
---
db > Executed: "insert 1 user1 user1@example.com"
db > Executed: "insert 2 user2 user2@example.com"
db > Executed: "insert 3 user3 user3@example.com"
db > Executed: "insert 4 user4 user4@example.com"
db > Executed: "insert 5 user5 user5@example.com"
db > Executed: "insert 6 user6 user6@example.com"
db > Executed: "insert 7 user7 user7@example.com"
db > Executed: "insert 8 user8 user8@example.com"
db > Executed: "insert 9 user9 user9@example.com"
db > Executed: "insert 10 user10 user10@example.com"
db > Executed: "insert 11 user11 user11@example.com"
db > Executed: "insert 12 user12 user12@example.com"
db > Executed: "insert 13 user13 user13@example.com"
db > Executed: "insert 14 user14 user14@example.com"
db > Bye.
db > (1, "user1", "user1@example.com")
(2, "user2", "user2@example.com")
(3, "user3", "user3@example.com")
(4, "user4", "user4@example.com")
(5, "user5", "user5@example.com")
(6, "user6", "user6@example.com")
(7, "user7", "user7@example.com")
(8, "user8", "user8@example.com")
(9, "user9", "user9@example.com")
(10, "user10", "user10@example.com")
(11, "user11", "user11@example.com")
(12, "user12", "user12@example.com")
(13, "user13", "user13@example.com")
(14, "user14", "user14@example.com")
Executed: "select"
db > Bye.
