db_tutorial/src/snapshots/db_tutorial__tests__persistent_single_row.snap
---
source: src/main.rs
expression: output
---
db > Executed: "insert 1 foo foo@example.com"
db > Bye.
db > (1, "foo", "foo@example.com")
Executed: "select"
db > Bye.
