db_tutorial/src/snapshots/db_tutorial__tests__single_row_insert_select.snap
---
source: src/main.rs
expression: run_test(input).unwrap()
---
db > Executed: "insert 1 user1 person@example.com"
db > (1, "user1", "person@example.com")
Executed: "select"
db > Bye.
